Fixed whitespace for sign in and login form notes

--- a/client/src/app/modules/auth/login-form/login-form.component.scss
+++ b/client/src/app/modules/auth/login-form/login-form.component.scss
@@ -17,8 +17,10 @@ form {
 
 .account-note {
   margin: 5px 0 15px 0;
+  text-align: center;
 }
 
 .account-note__link {
   margin: 0 5px;
+  display: inline-block;
 }
