--- a/client/src/app/modules/auth/sign-in-form/sign-in-form.component.scss
+++ b/client/src/app/modules/auth/sign-in-form/sign-in-form.component.scss
@@ -57,3 +57,12 @@ form {
   margin: 10px 0;
   text-align: center;
 }
+
+.account-note {
+  text-align: center;
+}
+
+.account-note__link {
+  display: inline-block;
+  margin: 0 5px;
+}
